--- a/src/app/Games/game-row/game-row.component.html
+++ b/src/app/Games/game-row/game-row.component.html
@@ -1,1 +1,8 @@
-<p>game-row works!</p>
+<div class="row card-body">
+    <div class="col card-title">
+       <h3> {{game?.name}}</h3> </div>
+
+    <div class="col ">
+        {{game?.release}}
+    </div>
+</div>
