Assingment Part 3 upload excl. uploading + logging

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,21 @@
   2021 Client Application for worksheets
 </h1>
 
-<app-game-list></app-game-list>
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/" routerLinkActive="active">Home</a>
+    <a class="nav-item nav-link" routerLink="/books" routerLinkActive="active">Games</a>
+    <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+    <a *ngIf="!user" class="nav-item nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+    <a *ngIf="!user" class="nav-item nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+    <a  *ngIf="user" class="nav-item nav-link" (click)="logout()">Logout</a>
+  </div>
+</nav>
 
+<div *ngIf="user">Current User: {{user.firstName}}</div>
+
+<div class="container pt-5">
+  <router-outlet></router-outlet>
+</div>
+
+<router-outlet></router-outlet>
